--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="author" content="Untree.co">
-  <link rel="shortcut icon" href="favicon.png">
+  <!-- <link rel="shortcut icon" href="favicon.png"> -->
 
   <meta name="description" content="" />
   <meta name="keywords" content="bootstrap, bootstrap4" />
@@ -25,7 +24,6 @@
   <link rel="stylesheet" href="css/aos.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/ccu.css">
-
   <title>Web Project</title>
 </head>
 
@@ -104,7 +102,7 @@
             <li><a href="contact.html">Contact Us</a></li>
           </ul>
 
-          <a href="#" class="btn-book btn gradient-button btn-sm menu-absolute">Registration</a>
+          <a href="#" class="btn-book btn reg-btn btn-sm menu-absolute">Registration</a>
 
           <a href="#" class="burger ml-auto float-right site-menu-toggle js-menu-toggle d-inline-block d-lg-none light" data-toggle="collapse" data-target="#main-navbar">
             <span></span>
