--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <li class="has-children">
               <a href="#">About Us</a>
               <ul class="dropdown" style="background-color:#1c2e70; color:#a6bcff;">
-                <li><a href="elements.html">Locations</a></li>
+                <li><a href="">Locations</a></li>
   
                 <li><a href="#">Resources</a></li>
               </ul>
@@ -59,14 +59,14 @@
             <li class="has-children">
               <a href="#">Services</a>
               <ul class="dropdown "style="background-color:#1c2e70; color:#a6bcff;">
-                <li><a href="elements.html">Cripto Asset Tracing</a></li>
+                <li><a href="">Cripto Asset Tracing</a></li>
                 <li><a href="#">All Services</a></li>
               </ul>
             </li>
 
-            <li><a href="staff.html">Client portal</a></li>
+            <li><a href="">Client portal</a></li>
             
-            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="">Contact Us</a></li>
           </ul>
 
           <a href="#" class="btn-book btn reg-btn btn-sm menu-absolute">Registration</a>
