--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <nav class="site-nav mb-5">
     <div class="sticky-nav js-sticky-header">
       <div class="container position-relative">
-        <div class="site-navigation text-center">
+        <div class="site-navigation nav-end">
           <a href="index.html" class="logo menu-absolute m-0">Logo</span></a>
 
           <ul class="js-clone-nav d-none d-lg-inline-block site-menu">
@@ -68,9 +68,10 @@
             <li><a href="">Client portal</a></li>
             
             <li><a href="">Contact Us</a></li>
+            <li><a href="#" class="  reg-btn">Registration</a></li>
           </ul>
 
-          <a href="#" class="btn-book btn reg-btn btn-sm menu-absolute">Registration</a>
+          <!-- <a href="#" class="btn-book btn reg-btn btn-sm menu-absolute">Registration</a> -->
 
           <a href="#" class="burger ml-auto float-right site-menu-toggle js-menu-toggle d-inline-block d-lg-none light" data-toggle="collapse" data-target="#main-navbar">
             <span></span>
