--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
             <li class="has-children">
               <a href="#">Services</a>
               <ul class="dropdown "style="background-color:#1c2e70; color:#a6bcff;">
-                <li><a href="">Cripto Asset Tracing</a></li>
+                <li><a href="#">Cripto Asset Tracing</a></li>
                 <li><a href="#">All Services</a></li>
               </ul>
             </li>
 
-            <li><a href="">Client portal</a></li>
+            <li><a href="#">Client portal</a></li>
             
-            <li><a href="">Contact Us</a></li>
-            <li><a href="#" class="  reg-btn">Registration</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="register.html" class="  reg-btn">Registration</a></li>
           </ul>
 
           <!-- <a href="#" class="btn-book btn reg-btn btn-sm menu-absolute">Registration</a> -->
@@ -101,7 +101,7 @@
 
               <h1 class="mb-4 heading text-white" data-aos="fade-up" data-aos-delay="100">Asset recovery made quick and simple</h1>
               <p class=" text-white" data-aos="fade-up" data-aos-delay="300">Trust the most established brand in the asset recovery ecosystem to recover your assets today.</p>
-              <p class="mb-0" data-aos="fade-up" data-aos-delay="300"><a href="https://cncintel.com/consultation/" class="btn  gradient-button">SET UP A CONSULTATION</a></p>
+              <p class="mb-0" data-aos="fade-up" data-aos-delay="300"><a href="consultation.html" class="btn  gradient-button">SET UP A CONSULTATION</a></p>
 
             </div>
 
