--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
   </nav>
   
 
-  <div class="untree_co-hero overlay" style="background-image: url('images/img-school-2-min.jpg');">
+  <div class="untree_co-hero overlay" style="background: url(images/img-school-2-min.jpg);">
     <div class="container">
       <div class="row align-items-center justify-content-center">
         <div class="col-12">
