--- a/about.html
+++ b/about.html
@@ -107,6 +107,7 @@
   </div>
 
   <div class="container ">
+    <div class="mobilenav"></div>
     <div class="grid-2c">
       <div class="section-21 text-center p-3 " data-aos="fade-up" data-aos-delay="300">
         <img src="images/cripto_tracing.PNG" alt=""width="120px">
@@ -143,7 +144,7 @@
 
     </div>
     <div class="approach-content grid-2c">
-      <div>
+      <div class="approach-text">
         <h2>Approach</h2>
         <h1>Our Approach to Asset Recovery</h1>
         <p>We believe that Intelligence led Asset Recovery leads to better results.  Gone are the old days when a simple demand could be made for assets or funds to be returned.  Today Cyber Criminals are extremely sophisticated at hiding assets and their identities. Cipher Asset Recovery enables our clients to even the playing field.  First identifying the real beneficial owners of the criminal scheme and locating recoverable assets.</p>
@@ -153,7 +154,7 @@
         </div>
       </div>
       <div>
-        <img src="images/cyber-security-14.png.webp" alt="" width="600px">
+        <img src="images/cyber-security-14.png.webp" alt="" >
       </div>
     </div>
  
@@ -165,23 +166,17 @@
 
 
   <div class="map row ">
-    <div class="map1 col-lg-6 text-center ">
+    <div class="map1 col-lg-6 text-center p-4 ">
       <div>
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2990.274257380938!2d-70.56068388481569!3d41.45496659976631!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e52963ac45bbcb%3A0xf05e8d125e82af10!2sDos%20Mas!5e0!3m2!1sen!2sus!4v1671220374408!5m2!1sen!2sus"
-         style="border:0;" allowfullscreen="" loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6201.420889630079!2d90.3582295914821!3d23.745292495168965!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755bf469be820d5%3A0x4adef06a7f46b014!2sRayer%20Bazaar%2C%20Dhaka!5e0!3m2!1sen!2sbd!4v1699736919571!5m2!1sen!2sbd" width="500" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </div>
-    <div class="map2 col-lg-6 text-center">
+    <div class="map2 col-lg-6 text-center p-4">
       <div>
 
       
 
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2990.274257380938!2d-70.56068388481569!3d41.45496659976631!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e52963ac45bbcb%3A0xf05e8d125e82af10!2sDos%20Mas!5e0!3m2!1sen!2sus!4v1671220374408!5m2!1sen!2sus"
-        style="border:0;" allowfullscreen="" loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6201.420889630079!2d90.3582295914821!3d23.745292495168965!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755bf469be820d5%3A0x4adef06a7f46b014!2sRayer%20Bazaar%2C%20Dhaka!5e0!3m2!1sen!2sbd!4v1699736919571!5m2!1sen!2sbd" width="500" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </div>
 
