--- a/asset.html
+++ b/asset.html
@@ -76,83 +76,88 @@
     </div>
   </nav>
 
-  
-  <div class="container">
-    <div class=".grid1 " data-aos="fade-up" data-aos-delay="300">
-      <div class="about-left" >
-        <h1 class="about-left-content" >
-          <img src="images/cyber-security-10.png.webp" alt="">
-        </h1>
-      </div>
-      <div class="about-right" data-aos="fade-up" data-aos-delay="300">
-        <h1>About Us</h1>
-        <p>
-          Cipher Asset Recovery was founded by Cyber Intelligence, Crypto Investigations, Asset Recovery and Offshore Legal Experts. With over 20 years of experience in these fields individually they came together to form a boutique Cyber and Crypto Intelligence Group focused on providing results.
-        </p>
-        <p>
-          Cipher Asset Recovery has recovered millions of dollars for customers from all around the world and is an expert in forensic cryptocurrency investigations and sophisticated card-not-present transaction disputes. Our advanced technology and expertise can help law enforcement agencies, cryptocurrency exchanges and banks by accelerating their own investigations and reducing overall processing time
-        </p>
-        <p>
-          Headquartered in the United Kingdom London, Cipher Asset Recovery has its Cybint Operations Center in Zurich, Switzerland and its Global Investigations Head Office in the United Kingdom, London.
-        </p>
-      </div>
 
-    </div>
-  </div>
 
   <div class="container ">
-    <div class="mobilenav"></div>
-    <div class="grid-2c">
-      <div class="section-21 text-center p-3 " data-aos="fade-up" data-aos-delay="300">
-        <img src="images/cripto_tracing.PNG" alt=""width="120px">
-        <h1>Cyber Investigationsc</h1>
-        <p>Our Cyber Investigators are Certified in the UK  and experienced with investigations spanning 6 continents.</p>
-
+    <div class="row ">
+      <div class="col-lg-12 asset11 " data-aos="fade-up" data-aos-delay="300">
+        <img src="images/assetrecovery.png" alt="" width="400px" style="z-index: 1; position: absolute;">
       </div>
-      <div class="section-22 text-center p-3" data-aos="fade-up" data-aos-delay="300">
-        <img src="images/cyber-security-illustrated-icons-03.webp" alt=""width="120px">
-        <h1>Open Source Intelligence</h1>
-        <p>Our team uses a variety of methods, including Open Source Intelligence (OSINT) in order to provide the raw data needed for our team to find actionable intelligence.</p>
-
-      </div>
-      <div class="section-23 text-center p-3" data-aos="fade-up" data-aos-delay="300">
-        <img src="images/cyber-security-illustrated-icons-05.webp" alt=""width="120px">
-        <h1>Digital Asset Tracing</h1>
-        <p>We are able to track the movement of several different cryptocurrencies and assets. If the cryptocurrency has been moved, we are able to follow it.</p>
-
-      </div>
-      <div class="section-24 text-center p-3" data-aos="fade-up" data-aos-delay="300">
-        <img src="images/cyber-security-illustrated-icons-06.png.webp" alt="" width="120px">
+      <div class="col-lg-12 asset1"data-aos="fade-up" data-aos-delay="300"></div>
+      <div class="col-lg-6 asset-margin" data-aos="fade-up" data-aos-delay="300">
+        <div class="asset-text ">
         <h1>Asset Recovery</h1>
-        <p>The first step to recovery is locating recoverable assets. Our experienced team will be able to walk you through the process.</p>
-
-      </div>
-
-    </div>
-
-  </div>
-
-
-  <div data-aos="fade-up" data-aos-delay="300" >
-    <div class="approach grid1">
-
-    </div>
-    <div class="approach-content grid-2c">
-      <div class="approach-text">
-        <h2>Approach</h2>
-        <h1>Our Approach to Asset Recovery</h1>
-        <p>We believe that Intelligence led Asset Recovery leads to better results.  Gone are the old days when a simple demand could be made for assets or funds to be returned.  Today Cyber Criminals are extremely sophisticated at hiding assets and their identities. Cipher Asset Recovery enables our clients to even the playing field.  First identifying the real beneficial owners of the criminal scheme and locating recoverable assets.</p>
+        <p>Harnessing intelligence-based Asset Recovery, Cipher Asset Recovery equips law enforcement and law firms with the evidence they need to achieve successful fund recovery.
+          With our expertise and experience, we have been instrumental in recovering funds lost through Bank Transfers or Cryptocurrency transactions.
+        </p>
         <br>
         <div>
           <h6><a href="register.html" class="round-button ">SET UP A CONSULTATION</a></h6>
         </div>
+        </div>
+
       </div>
-      <div>
-        <img src="images/cyber-security-14.png.webp" alt="" >
+      <div class="col-lg-6 asset2 my-1" data-aos="fade-up" data-aos-delay="300">
+        <img src="images/cyber-security-09-1.png.webp" alt="">
+      </div>
+
+    </div>
+
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center" data-aos="fade-up" data-aos-delay="300">
+        <div class="text-center asset-about  ">
+          <h4>About</h4>
+          <h1>Asset Recovery</h1>
+          <p>Also known as fund recovery, requires experience and expertise. We have a top-notch record assisting law enforcement and law firms to recover funds that were sent with the following methods:</p>
+        </div>
       </div>
     </div>
- 
+
   </div>
+  
+  <div class="container">
+    <div class="row p-lg-4 ">
+      <div class="col-lg-6"data-aos="fade-up" data-aos-delay="300">
+        <div class="text-center ">
+          <h4>Bank Wire Tracing</h4>
+          <p>Our team of international banking experts offers a service to accurately trace the movement of funds. Each jurisdiction presents its unique challenges, but with our innovative fund tracing service and a network of lawyers worldwide, Cipher Asset Recovery can assist not only with your local bank but also apply pressure on the beneficiary bank and company that received the funds.</p>
+        </div>
+      </div>
+      <div class="col-lg-6"data-aos="fade-up" data-aos-delay="300">
+        <div class="text-center ">
+          <h4>Cryptocurrency Tracing</h4>
+          <p>We trace and provide evidence for a range of Cryptocurrencies, including Bitcoin and Ethereum, among others. Our Investigations Team, led by Ted Jackson, tracks down the owners once the Cryptocurrency is traced to the last Wallet before being exchanged for Fiat Currency, thereby enabling the recovery of your funds.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div data-aos="fade-up" data-aos-delay="300">
+    <div class="fund-recovery"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 fund-middle">
+          <img class="fund-img" src="images/cyber-security-02-1.png.webp" alt="">
+        </div>
+        <div class="col-lg-6 fund-middle text-white ">
+          <h4 class="text-white ">About</h4>
+          <h1 class="text-white">Fund Recovery</h1>
+          <p>There is no substitute for experience and expertise. Cipher Asset Recovery offers bespoke solutions tailored to the unique needs of your case. We understand that no two cases are exactly the same, and they should not be treated as such. That’s why every case requiring fund recovery assistance is individually evaluated. We provide specific investigative services for each case to offer crucial evidence and aid both law enforcement and law firms in their efforts to recover funds.</p>
+          <div class="my-5 ">
+            <h6><a href="" class="round-button ">LEARN MORE</a></h6>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+  
+  
 
 
 <div class="container py-lg-5  " data-aos="fade-up" data-aos-delay="300">
