--- a/index.html
+++ b/index.html
@@ -48,21 +48,15 @@
           <a href="index.html" class="logo menu-absolute m-0">Logo</span></a>
 
           <ul class="js-clone-nav d-none d-lg-inline-block site-menu">
-            <li class="has-children">
-              <a href="#">About Us</a>
-              <ul class="dropdown" style="background-color:#1c2e70; color:#a6bcff;">
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="">Locations</a></li>
-  
-                <li><a href="#">Resources</a></li>
-              </ul>
+            <li>
+              <a href="about.html">About Us</a>
             </li>
 
             <li class="has-children">
               <a href="#">Services</a>
               <ul class="dropdown "style="background-color:#1c2e70; color:#a6bcff;">
-                <li><a href="#">Cripto Asset Tracing</a></li>
-                <li><a href="#">All Services</a></li>
+                <li><a href="Cryptoasset.html">Cripto Asset Tracing</a></li>
+                <li><a href="asset.html">Asset Recovery</a></li>
               </ul>
             </li>
 
