--- a/Cryptoasset.html
+++ b/Cryptoasset.html
@@ -81,10 +81,11 @@
   <div class="container ">
     <div class="row ">
       <div class="col-lg-12 asset11 " data-aos="fade-up" data-aos-delay="300">
-        <img src="images/assetrecovery.png" alt="" width="400px" style="z-index: 1; position: absolute;">
+        
       </div>
       <div class="col-lg-12 asset1"data-aos="fade-up" data-aos-delay="300"></div>
       <div class="col-lg-6 asset-margin" data-aos="fade-up" data-aos-delay="300">
+        <img class="network" src="images/assetrecovery.png" alt="" >
         <div class="asset-text ">
         <h1>Cryptocurrency Tracing and Recovery</h1>
         <p>The first step to recovering virtual assets is to determine where they were moved to and to whom. This establishes our target.
