--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="sticky-nav js-sticky-header">
       <div class="container position-relative">
         <div class="site-navigation nav-end">
-          <a href="index.html" class="logo menu-absolute m-0">Logo</span></a>
+          <a href="index.html" class="logo menu-absolute m-0"><span class="logo1"><img src="images/logo.webp" alt="Logo"></span></a>
 
           <ul class="js-clone-nav d-none d-lg-inline-block site-menu">
             <li>
