upadated contact and consultation page

--- a/Cryptoasset.html
+++ b/Cryptoasset.html
@@ -61,7 +61,7 @@
 
             <li><a href="#">Client portal</a></li>
             
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
             <li><a href="register.html" class="  reg-btn">Registration</a></li>
           </ul>
 
@@ -93,7 +93,7 @@
         </p>
         <br>
         <div>
-          <h6><a href="register.html" class="round-button ">SET UP A CONSULTATION</a></h6>
+          <h6><a href="consultation.html"round-button ">SET UP A CONSULTATION</a></h6>
         </div>
         </div>
 
