--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
 
             <li><a href="#">Client portal</a></li>
             
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
             <li><a href="register.html" class="  reg-btn">Registration</a></li>
           </ul>
 
@@ -144,7 +144,7 @@
         <p>We believe that Intelligence led Asset Recovery leads to better results.  Gone are the old days when a simple demand could be made for assets or funds to be returned.  Today Cyber Criminals are extremely sophisticated at hiding assets and their identities. Cipher Asset Recovery enables our clients to even the playing field.  First identifying the real beneficial owners of the criminal scheme and locating recoverable assets.</p>
         <br>
         <div>
-          <h6><a href="register.html" class="round-button ">SET UP A CONSULTATION</a></h6>
+          <h6><a href="consultation.html" class="round-button ">SET UP A CONSULTATION</a></h6>
         </div>
       </div>
       <div>
