--- a/asset.html
+++ b/asset.html
@@ -61,8 +61,8 @@
 
             <li><a href="#">Client portal</a></li>
             
-            <li><a href="#">Contact Us</a></li>
-            <li><a href="register.html" class="  reg-btn">Registration</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="register.html" class="reg-btn">Registration</a></li>
           </ul>
 
           <!-- <a href="#" class="btn-book btn reg-btn btn-sm menu-absolute">Registration</a> -->
@@ -92,7 +92,7 @@
         </p>
         <br>
         <div>
-          <h6><a href="register.html" class="round-button ">SET UP A CONSULTATION</a></h6>
+          <h6><a href="consultation.html" class="round-button ">SET UP A CONSULTATION</a></h6>
         </div>
         </div>
 
