--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
             <li><a href="#">Client portal</a></li>
             
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
             <li><a href="register.html" class="  reg-btn">Registration</a></li>
           </ul>
 
@@ -211,6 +211,8 @@
     </div>
     </div>
   </div>
+
+
   <div class="site-footer">
 
 
