--- a/consultation.html
+++ b/consultation.html
@@ -137,7 +137,7 @@
   <div class="map row ">
     <div class="map1 col-lg-6 text-center p-4 ">
       <div>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6201.420889630079!2d90.3582295914821!3d23.745292495168965!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755bf469be820d5%3A0x4adef06a7f46b014!2sRayer%20Bazaar%2C%20Dhaka!5e0!3m2!1sen!2sbd!4v1699736919571!5m2!1sen!2sbd" width="500" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6201.420889630079!2d90.3582295914821!3d23.745292495168965!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755bf469be820d5%3A0x4adef06a7f46b014!2sRayer%20Bazaar%2C%20Dhaka!5e0!3m2!1sen!2sbd!4v1699736919571!5m2!1sen!2sbd" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"class="map2"></iframe>
       </div>
     </div>
     <div class="map2 col-lg-6 text-center p-4">
@@ -145,7 +145,7 @@
 
       
 
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6201.420889630079!2d90.3582295914821!3d23.745292495168965!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755bf469be820d5%3A0x4adef06a7f46b014!2sRayer%20Bazaar%2C%20Dhaka!5e0!3m2!1sen!2sbd!4v1699736919571!5m2!1sen!2sbd" width="500" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6201.420889630079!2d90.3582295914821!3d23.745292495168965!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755bf469be820d5%3A0x4adef06a7f46b014!2sRayer%20Bazaar%2C%20Dhaka!5e0!3m2!1sen!2sbd!4v1699736919571!5m2!1sen!2sbd" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"class="map2"></iframe>
       </div>
     </div>
 
