--- a/index.html
+++ b/index.html
@@ -48,15 +48,26 @@
           <a href="index.html" class="logo menu-absolute m-0"><span class="logo1"><img src="images/logo.webp" alt="Logo"></span></a>
 
           <ul class="js-clone-nav d-none d-lg-inline-block site-menu">
-            <li>
-              <a href="about.html">About Us</a>
+            <li class="has-children">
+              <a href="#">About Us</a>
+              <ul class="dropdown "style="background-color:#1c2e70; color:#a6bcff;">
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="#">Location</a></li>
+                <li><a href="consultation.html">Schedule Consultation</a></li>
+                <li><a href="contact.html">Contact Us</a> </li>
+
+              </ul>
             </li>
 
             <li class="has-children">
               <a href="#">Services</a>
               <ul class="dropdown "style="background-color:#1c2e70; color:#a6bcff;">
+                <li><a href="all-services.html">All Services</a></li>
                 <li><a href="Cryptoasset.html">Cripto Asset Tracing</a></li>
                 <li><a href="asset.html">Asset Recovery</a></li>
+                <li><a href="forex.html">Forex Recovery</a></li>
+                <li><a href="#">Wire Transfer Recalls</a></li>
+                <li><a href="#">ChargeBacks</a></li>
               </ul>
             </li>
 
@@ -267,7 +278,7 @@
 </div>
 </div>
 <div class="footer1 text-center ">
-  All rights reserved to CNC Intelligence Inc., 2023. ● CNC Intelligence Inc. is registered in Delaware with file number: 3154686
+  &copy; All rights reserved to 2020-2023 CipherAssetRecovery.com, LLP. All Rights Reserved
 </div>
 
 
