--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <li><a href="Cryptoasset.html">Cripto Asset Tracing</a></li>
                 <li><a href="asset.html">Asset Recovery</a></li>
                 <li><a href="forex.html">Forex Recovery</a></li>
-                <li><a href="#">Wire Transfer Recalls</a></li>
+                <li><a href="wire-transfer-recalls.html">Wire Transfer Recalls</a></li>
                 <li><a href="#">ChargeBacks</a></li>
               </ul>
             </li>
