--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
                 <li><a href="asset.html">Asset Recovery</a></li>
                 <li><a href="forex.html">Forex Recovery</a></li>
                 <li><a href="wire-transfer-recalls.html">Wire Transfer Recalls</a></li>
-                <li><a href="#">ChargeBacks</a></li>
+                <li><a href="chargeback.html">ChargeBacks</a></li>
               </ul>
             </li>
 
