--- a/Cryptoasset.html
+++ b/Cryptoasset.html
@@ -87,16 +87,15 @@
     </div>
   </nav>
 
+  <div class="col-lg-12 asset1"data-aos="fade-up" data-aos-delay="300">
+    <img class="network" src="images/assetrecovery.png" alt="" >
 
+  </div>
 
   <div class="container ">
     <div class="row ">
-      <div class="col-lg-12 asset11 " data-aos="fade-up" data-aos-delay="300">
-        
-      </div>
-      <div class="col-lg-12 asset1"data-aos="fade-up" data-aos-delay="300"></div>
+
       <div class="col-lg-6 asset-margin" data-aos="fade-up" data-aos-delay="300">
-        <img class="network" src="images/assetrecovery.png" alt="" >
         <div class="asset-text ">
         <h1>Cryptocurrency Tracing and Recovery</h1>
         <p>The first step to recovering virtual assets is to determine where they were moved to and to whom. This establishes our target.
@@ -104,7 +103,7 @@
         </p>
         <br>
         <div>
-          <h6><a href="consultation.html"round-button ">SET UP A CONSULTATION</a></h6>
+          <h6><a href="consultation.html" class="round-button ">SET UP A CONSULTATION</a></h6>
         </div>
         </div>
 
@@ -135,19 +134,19 @@
       <div class="col-lg-4"data-aos="fade-up" data-aos-delay="300">
         <div class="text-center ">
           <h4>Are Cryptos Traceable?</h4>
-          <p>While Cryptocurrencies are, with few exceptions, decentralized, almost all virtual currencies are traceable. Cryptocurrencies are kept in digital accounts referred to as wallets. Each time Cryptocurrency is moved from one wallet to another it is recorded in the Blockchain.</p>
+          <p class="text-justify">While Cryptocurrencies are, with few exceptions, decentralized, almost all virtual currencies are traceable. Cryptocurrencies are kept in digital accounts referred to as wallets. Each time Cryptocurrency is moved from one wallet to another it is recorded in the Blockchain.</p>
         </div>
       </div>
       <div class="col-lg-4"data-aos="fade-up" data-aos-delay="300">
         <div class="text-center ">
           <h4>The Technical Solution</h4>
-          <p>We are able to not only trace the movement of Cryptocurrency and identify the specific wallets, we are also able to identify where those wallets are being held and even track the locations of those that access the wallets.</p>
+          <p class="text-justify">We are able to not only trace the movement of Cryptocurrency and identify the specific wallets, we are also able to identify where those wallets are being held and even track the locations of those that access the wallets.</p>
         </div>
       </div>
       <div class="col-lg-4"data-aos="fade-up" data-aos-delay="300">
         <div class="text-center ">
           <h4>Not all Cryptos are Equal</h4>
-          <p>Most Cryptocurrencies are traceable, however, not all. We are able to trace the most popular Cryptocurrencies, including Bitcoin and Ethereum, as well as others.
+          <p class="text-justify">Most Cryptocurrencies are traceable, however, not all. We are able to trace the most popular Cryptocurrencies, including Bitcoin and Ethereum, as well as others.
           </p>
         </div>
       </div>
@@ -168,9 +167,9 @@
 
   <div class="container">
     <div class="hire-law" data-aos="fade-up" data-aos-delay="300">
-      <h1>Hire a Law Firm or Work with the Police for Cryptocurrency Scam/Fraud Tracing & Recovery</h1>
-      <p>If you have recently fallen victim to a cryptocurrency scam or fraud, you may know how challenging it can be to recover your funds, especially if you try to handle it on your own. At our firm, we offer expert witness assistance and we are available to assist law enforcement agencies, upon their request, to help you with the process of cryptocurrency scam/fraud tracing and recovery.</p>
-      <p>
+      <h1 class="text-black ">Hire a Law Firm or Work with the Police for Cryptocurrency Scam/Fraud Tracing & Recovery</h1>
+      <p class="text-justify">If you have recently fallen victim to a cryptocurrency scam or fraud, you may know how challenging it can be to recover your funds, especially if you try to handle it on your own. At our firm, we offer expert witness assistance and we are available to assist law enforcement agencies, upon their request, to help you with the process of cryptocurrency scam/fraud tracing and recovery.</p>
+      <p class="text-justify">
         The use of digital currency has been on the rise, and with it, the occurrence of crypto fraud or crime. When theft or loss occurs, crypto tracing is now possible to track the funds and potentially recover them.
       </p>
 
@@ -196,12 +195,12 @@
 
       </div>
       <div class="col-lg-4 shadow  p-4" data-aos="fade-up" data-aos-delay="300">
-        <h1>High Volatility</h1>
+        <h2>High Volatility</h2>
         <hr>
         <p>The massive rise in cryptocurrency prices, coupled with stories of crypto millionaires, creates fear of missing out (FOMO) and the anticipation of huge profits. This can make average investors susceptible to scams, as some cryptocurrencies have made significant gains in just one year.</p>
       </div>
       <div class="col-lg-4 shadow p-4" data-aos="fade-up" data-aos-delay="300">
-        <h1>Lack of Consumer Protection</h1>
+        <h2>Lack of Consumer Protection</h2>
         <hr>
         <p>Unlike stock market investors who enjoy a certain level of security through regulations, cryptocurrencies offer little consumer protection. It can be difficult to differentiate between legitimate and fake businesses in the crypto space.</p>
 
@@ -216,11 +215,11 @@
     <div class="row my-lg-4 py-lg-5  ">
       <div class="col-lg-12 text-center" data-aos="fade-up" data-aos-delay="300">
         <div class="text-center asset-about Tracing  ">
-          <h1 class="py-3">Tracing Stolen Cryptocurrency</h1>
-          <h5 class="py-3">In order to best assist our clients with their recovery process, we can start tracing their cryptocurrency as soon as we receive the documentation.</h5>
-          <p>Our tracing service’s goal is to identify which Virtual Asset Service Provider the assets were sent to, to enable our clients to work with law enforcement or a law firm to potentially freeze any assets in the relevant wallets.</p>
-          <p>We are able to assist law enforcement and law firms to prepare freezing injunctions for wallets linked to the clients case, with the goal of preventing future transfers.</p>
-          <p>Blockchain transparency allows us to trace on-chain movements of crypto assets on the most popular blockchains and determine where the stolen cryptos went. If the funds are going to a service or exchange, our investigative team can work towards identifying the Virtual Asset Service Provider (such as an exchange) that received the crypto asset(s).</p>
+          <h1 class="py-3 text-black ">Tracing Stolen Cryptocurrency</h1>
+          <h5 class="py-3 ">In order to best assist our clients with their recovery process, we can start tracing their cryptocurrency as soon as we receive the documentation.</h5>
+          <p class="text-justify">Our tracing service’s goal is to identify which Virtual Asset Service Provider the assets were sent to, to enable our clients to work with law enforcement or a law firm to potentially freeze any assets in the relevant wallets.</p>
+          <p class="text-justify">We are able to assist law enforcement and law firms to prepare freezing injunctions for wallets linked to the clients case, with the goal of preventing future transfers.</p>
+          <p class="text-justify">Blockchain transparency allows us to trace on-chain movements of crypto assets on the most popular blockchains and determine where the stolen cryptos went. If the funds are going to a service or exchange, our investigative team can work towards identifying the Virtual Asset Service Provider (such as an exchange) that received the crypto asset(s).</p>
         </div>
       </div>
     </div>
@@ -237,25 +236,25 @@
       <div class="col-lg-3" data-aos="fade-up" data-aos-delay="300">
         <div class="steps-to-trace">
           <h3>Step 1</h3>
-          <p>The first step is for the client to send the investigation company the relevant information and evidence connected to the initial cryptocurrency transfers they sent.</p>
+          <p class="text-justify">The first step is for the client to send the investigation company the relevant information and evidence connected to the initial cryptocurrency transfers they sent.</p>
         </div>
       </div>
       <div class="col-lg-3" data-aos="fade-up" data-aos-delay="300">
         <div class="steps-to-trace">
           <h3>Step 2</h3>
-          <p>Then the investigator will review the documents and trace the cryptocurrency</p>
+          <p class="text-justify">Then the investigator will review the documents and trace the cryptocurrency</p>
         </div>
       </div>
       <div class="col-lg-3" data-aos="fade-up" data-aos-delay="300">
         <div class="steps-to-trace">
           <h3>Step 3</h3>
-          <p>If the trace is successful, a full report of the transactions should be drafted. At Cipher Asset Recovery, our team meticulously details the relevant transfers, as well as supporting documentation to aid law enforcement and law firms to request a subpoena for the identified transfers to Virtual Asset Service Providers.</p>
+          <p class="text-justify" >If the trace is successful, a full report of the transactions should be drafted. At Cipher Asset Recovery, our team meticulously details the relevant transfers, as well as supporting documentation to aid law enforcement and law firms to request a subpoena for the identified transfers to Virtual Asset Service Providers.</p>
         </div>
       </div>
       <div class="col-lg-3" data-aos="fade-up" data-aos-delay="300">
         <div class="steps-to-trace">
           <h3>Step 4</h3>
-          <p>	At Cipher Asset Recovery, all reports are reviewed for quality assurance</p>
+          <p class="text-justify">	At Cipher Asset Recovery, all reports are reviewed for quality assurance</p>
         </div>
       </div>
     </div>
@@ -268,9 +267,9 @@
     </div>
   </div>
 
-
+  <div class="fund-recovery"></div>
   <div data-aos="fade-up" data-aos-delay="300">
-    <div class="fund-recovery"></div>
+    
     <div class="container">
       <div class="row">
         <div class="col-lg-6 fund-middle">
