--- a/Cryptoasset.html
+++ b/Cryptoasset.html
@@ -270,12 +270,12 @@
   <div class="fund-recovery"></div>
   <div data-aos="fade-up" data-aos-delay="300">
     
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6 fund-middle">
+    
+      <div class="row fund-middle">
+        <div class="col-lg-6 ">
           <img class="fund-img" src="images/cyber-security-02-1.png.webp" alt="">
         </div>
-        <div class="col-lg-6 fund-middle text-white ">
+        <div class="col-lg-6 text-white ">
           <h4 class="text-white ">About</h4>
           <h1 class="text-white">How Much Bitcoin</h1>
           <p>While the amount of Cryptocurrency that is either stolen, embezzled or misappropriated is unknown, experts agree the figure is in the Billions every year. </p>
@@ -288,7 +288,7 @@
 
       </div>
     </div>
-  </div>
+
 
  
 
