--- a/asset.html
+++ b/asset.html
@@ -147,13 +147,12 @@
 
 
   <div data-aos="fade-up" data-aos-delay="300">
-    <div class="fund-recovery"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6 fund-middle">
+    
+      <div class="row fund-middle">
+        <div class="col-lg-6 ">
           <img class="fund-img" src="images/cyber-security-02-1.png.webp" alt="">
         </div>
-        <div class="col-lg-6 fund-middle text-white ">
+        <div class="col-lg-6  text-white ">
           <h4 class="text-white ">About</h4>
           <h1 class="text-white">Fund Recovery</h1>
           <p>There is no substitute for experience and expertise. Cipher Asset Recovery offers bespoke solutions tailored to the unique needs of your case. We understand that no two cases are exactly the same, and they should not be treated as such. That’s why every case requiring fund recovery assistance is individually evaluated. We provide specific investigative services for each case to offer crucial evidence and aid both law enforcement and law firms in their efforts to recover funds.</p>
@@ -163,7 +162,7 @@
         </div>
 
       </div>
-    </div>
+   
   </div>
 
 
